WIP optimization. Now only reuse rating function are missing

--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
 Idea for options :
     - read access only (to only analyse read access of statements)
     - Right Hand Side (to only analyse access of the right hande side of a statement)
+
+Optimizations :
+    -try to aggregate statement that have different domain et/or scattering
